--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 body{
-background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+  background-color: #FAD961;
+background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
 
 
 
