--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 }
 
 body{
-  background-color: #FAD961;
-background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
 
-
+background-image: url('https://wallpapercave.com/wp/rYa3Aoq.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 
 
 
@@ -61,6 +62,7 @@ h1{
   color: white;
   margin-bottom: 30%;
   margin-left: 50%;
+  font-size: 30px;
   
 
 }
