--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 body{
 
-background-image: url('https://wallpapercave.com/wp/rYa3Aoq.jpg');
+
+  background-color:gray;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
